--- a/src/Servers/Kestrel/Core/src/CoreStrings.resx
+++ b/src/Servers/Kestrel/Core/src/CoreStrings.resx
@@ -606,6 +606,6 @@ For more information on configuring HTTPS see https://go.microsoft.com/fwlink/?l
     <value>Connection "{connectionId}" established using the following protocol: {protocol}</value>
   </data>
   <data name="HTTP2DefaultCiphersInsufficient" xml:space="preserve">
-    <value>HTTP/2 over TLS is not supported on Windows versions older than Windows 10 and Windows Server 2016 due to incompatible ciphers. Falling back to HTTP/1.1 instead.</value>
+    <value>HTTP/2 over TLS is not supported on Windows versions older than Windows 10 and Windows Server 2016 due to incompatible ciphers or missing ALPN support. Falling back to HTTP/1.1 instead.</value>
   </data>
 </root>
